[package]
name = "forge"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal password generator CLI built in Rust."
authors = ["Victor Magueta Soler <solermvictor@gmail.com>"]
license = "MIT"
repository = "https://github.com/vmagueta/forge"
keywords = ["password", "generator", "cli", "security"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
rand = "0.10.0"
