[package]
name = "forgekey"
version = "0.2.0"
edition = "2024"
description = "A fast, minimal password generator CLI built in Rust."
authors = ["Victor Magueta Soler <solermvictor@gmail.com>"]
license = "MIT"
repository = "https://github.com/vmagueta/forge"
keywords = ["password", "generator", "cli", "security"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
rand = "0.10.0"
arboard = "3.2"
